--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -38,6 +38,6 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
     -
       name: Build and push
-      uses: josselinduhamel/demo-app
+      uses: docker.io/josselinduhamel/demo-app@master
       with:
         push: true
