--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -27,17 +27,12 @@ jobs:
     - 
       name: Build with Gradle
       run: ./gradlew build
-    -
-      name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-    -
-      name: Login to DockerHub
-      uses: docker/login-action@v1 
+    - 
+      uses: actions/checkout@master
+    - 
+      name: Publish to Registry
+      uses: elgohr/Publish-Docker-Github-Action@master
       with:
+        name: josselinduhamel/demo-app
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-    -
-      name: Build and push
-      uses: docker/josselinduhamel/demo-app@master
-      with:
-        push: true
