--- a/.github/workflows/build-test-app.yml
+++ b/.github/workflows/build-test-app.yml
@@ -31,7 +31,7 @@ jobs:
       run: ./gradlew build
     - 
       name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@master
+      uses: elgohr/Publish-Docker-Github-Action@v5
       with:
         name: josselinduhamel/demo-app
         username: ${{ secrets.DOCKER_USERNAME }}
